nsr-admin bin