@@ -1,3 +1,4 @@
+#!/bin/bash
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,11 +13,20 @@
 # limitations under the License.
 #
 
-name: JournalQ
-driverClass: io.openmessaging.benchmark.driver.journalq.JournalQBenchmarkDriver
 
-# JournalQ client-specific configuration
-clusterName: DefaultCluster
-namesrvAddr: 172.17.0.1:50088
-adminAddr: http://172.17.0.1:50091
+
+if [ -d "./lib" ]; then
+        CLASSPATH=$CLASSPATH:lib/*
+else
+    BASEDIR=`dirname $0`/../../..
+    BASEDIR=`(cd "$BASEDIR"; pwd)`
+    echo 'module dir:'$BASEDIR
+    CLASSPATH=$BASEDIR/target/classes:`cat $BASEDIR/target/classpath.txt`
+fi
+
+JVM_MEM="-Xms4G -Xmx4G -XX:+UseG1GC"
+JVM_GC_LOG=" -XX:+PrintGCDetails -XX:+PrintGCApplicationStoppedTime  -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=64m  -Xloggc:/dev/shm/benchmark-client-gc_%p.log"
+
+java -cp $CLASSPATH $JVM_MEM com.jd.journalq.nsr.admin.AppAdmin $*
+
 
